[package]
name = "railroad"
version = "0.1.0"
edition = "2021"
authors = ["Tarun Gunaseelan"]
readme = "readme.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.11"
env_logger = "0.10.0"
futures = "0.3.27"
http = "0.2.9"
hyper = "0.14.25"
log = "0.4.17"
serde = { version = "1.0.157", features = ["derive"] }
serde_yaml = "0.9.19"
tokio = {version = "1.26.0", features = ["full"]}

[lib]
name = "railroad"
path = "src/main.rs"




